# Starstream

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  MAINTAINERS.md  Makefile  README-DSL.md  README.md  flake.nix  impl-plan.md  index.html  index.js  input.wat  package-lock.json  package.json  run  starstream  test  tsconfig.json  wow.star
ark-poseidon2/: Cargo.toml
ark-poseidon2/benches/: poseidon2_gadget.rs
ark-poseidon2/src/: constants.rs  gadget.rs  goldilocks.rs  lib.rs  linear_layers.rs  math.rs
example_contract/: Cargo.toml
example_contract/src/: lib.rs  main.rs
example_toy_vm/example/: Cargo.toml
example_toy_vm/example/src/: lib.rs  main.rs
example_toy_vm/toy_vm/: Cargo.toml
example_toy_vm/toy_vm/src/: lib.rs  value.rs
interleaving/starstream-component-runtime/: Cargo.toml
interleaving/starstream-component-runtime/src/: abi.rs  component.rs  executor.rs  lib.rs  state.rs  transaction_session.rs  wasmtime.rs
interleaving/starstream-demo/: Cargo.toml  README.md
interleaving/starstream-demo/src/: defaults.rs  main.rs  model.rs  state.rs
interleaving/starstream-demo/ui/: app.js  index.html  styles.css
interleaving/starstream-interleaving-proof/: Cargo.toml  README.md
interleaving/starstream-interleaving-proof/src/: abi.rs  circuit.rs  circuit_test.rs  coroutine_args_gadget.rs  execution_switches.rs  folding.rs  handler_stack_gadget.rs  ledger_operation.rs  lib.rs  logging.rs  memory_tags.rs  must_enter_gadget.rs  neo.rs  opcode_dsl.rs  optional.rs  program_hash_gadget.rs  program_state.rs  ref_arena_gadget.rs  rem_wires_gadget.rs  switchboard.rs
interleaving/starstream-interleaving-spec/: ARCHITECTURE.md  Cargo.toml  EFFECTS_REFERENCE.md  README.md  WASM.md
interleaving/starstream-interleaving-spec/src/: builder.rs  lib.rs  memory_tags.rs  mocked_verifier.rs  tests.rs
interleaving/starstream-runtime/: Cargo.toml
interleaving/starstream-runtime/src/: lib.rs  trace_mermaid.rs
interleaving/starstream-runtime/tests/: integration.rs  integration_test.rs  multi_tx_continuation.rs  test_dex_swap_flow.rs  wasm_dsl.rs  wrapper_coord_test.rs
mock-ledger/backend/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
mock-ledger/backend/ledger/: Cargo.toml
mock-ledger/backend/node-client/: Cargo.toml  README.md
mock-ledger/backend/node-server/: Cargo.toml  README.md
mock-ledger/backend/registry/: Cargo.toml  README.md
mock-ledger/backend/wrpc-multiplexer/: Cargo.toml  README.md
starstream-channel-ledger/: Cargo.toml  DESIGN.md
starstream-channel-ledger/src/: lib.rs
starstream-cli/: Cargo.toml
starstream-cli/src/: build.rs  check.rs  diagnostics.rs  docs.rs  explain.rs  format.rs  lib.rs  lsp.rs  project.rs  wasm.rs
starstream-compiler/: Cargo.toml
starstream-compiler/src/: docs.rs  formatter.rs  lib.rs  module_graph.rs
starstream-compiler/src/parser/: comment.rs  context.rs  definition.rs  error.rs  mod.rs  pattern.rs  primitives.rs  program.rs  statement.rs  type_annotation.rs
starstream-compiler/src/snapshots/: starstream_compiler__formatter__tests__abi_with_methods.snap  starstream_compiler__formatter__tests__block_comment_before_function.snap  starstream_compiler__formatter__tests__block_comment_inside_function.snap  starstream_compiler__formatter__tests__comment_at_start_of_function_body.snap  starstream_compiler__formatter__tests__comment_map_doc_comment_on_function.snap  starstream_compiler__formatter__tests__comment_map_inline_and_block_comments.snap  starstream_compiler__formatter__tests__comments.snap  starstream_compiler__formatter__tests__comments_in_if_block.snap  starstream_compiler__formatter__tests__comments_in_match_arms.snap  starstream_compiler__formatter__tests__comments_in_while_block.snap  starstream_compiler__formatter__tests__comments_inside_function_body.snap  starstream_compiler__formatter__tests__comments_on_enum_variants.snap  starstream_compiler__formatter__tests__comments_on_struct_fields.snap  starstream_compiler__formatter__tests__contract_before_imports.snap  (+33 more)
starstream-interleaving-proof/: Cargo.toml
starstream-interleaving-proof/src/: abi.rs  circuit.rs  circuit_test.rs  lib.rs  logging.rs  neo.rs
starstream-language-server/: Cargo.toml
starstream-language-server/src/: capabilities.rs  diagnostics.rs  document.rs  lib.rs
starstream-runtime/: Cargo.toml
starstream-runtime-next/: Cargo.toml
starstream-runtime-next/src/: lib.rs
starstream-runtime-next/tests/: score.rs
starstream-runtime/src/: lib.rs
starstream-runtime/tests/: integration.rs
starstream-sandbox-web/: Cargo.toml  build.rs
starstream-sandbox-web/src/: instrument.rs  lib.rs  platform.rs
starstream-to-wasm/: Cargo.toml
starstream-to-wasm/src/: component_abi.rs  decision_tree.rs  encoder.rs  ir.rs  lib.rs  stackifier.rs
starstream-to-wasm/tests/: baseline.rs  multifile.rs  overflow.rs  snapshots.rs
starstream-to-wasm/wit/: builtin.wit
starstream-web/: Cargo.toml
starstream-web/src/: lib.rs
starstream_cli/: Cargo.toml
starstream_cli/src/: main.rs
starstream_ivc_proto/: Cargo.toml  README.md  SEMANTICS.md
starstream_ivc_proto/src/: abi.rs  circuit.rs  circuit_test.rs  e2e.rs  lib.rs  logging.rs  memory.rs  neo.rs  test_utils.rs
starstream_nova/: Cargo.toml  MVP.md  PROVING.md  test_witness.txt
starstream_nova/src/: circuits.rs  exec.rs  interface.rs  lib.rs  r1cs.rs  switchboard.rs  test.rs  wasm_grammar_subset.txt  wasm_parser.rs
starstream_nova/tests/: compile.rs  parse_wasm.rs
starstream_sandbox/: Cargo.toml
starstream_sandbox/src/: main.rs
starstream_vm/: Cargo.toml
starstream_vm/examples/: self_test.rs  self_test_permissioned.rs
starstream_vm/src/: code.rs  lib.rs  main.rs  mermaid.rs  nebula.rs
starstream_vm/tests/: status.wat  test_codegen_effect_handlers.rs  test_codegen_simple_oracle.rs  test_codegen_token_binding.rs  test_example_contract.rs  test_permissioned.rs  test_proving.rs  test_status.rs  toy_vm_example.rs
test-contracts/: Cargo.toml  build.rs
test-contracts/src/: lib.rs
(+796 files in other folders)
