[workspace]
resolver = "2"
members = [
  "starstream-cli",
  "starstream-compiler",
  "starstream-interpreter",
  "starstream-language-server",
  "starstream-language-server-web",
  "starstream-sandbox-web",
  "starstream-to-wasm",
  "starstream-types",
  "interleaving/starstream-interleaving-proof",
  "interleaving/starstream-interleaving-spec",
  "interleaving/starstream-runtime",
  "ark-poseidon2",
  "ark-goldilocks"
]
exclude = ["old"]

[workspace.package]
version = "0.0.0"
authors = []
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/LFDT-Nightstream/Starstream"
license = "MIT/Apache-2.0"

[workspace.dependencies]
ariadne = "0.5.1"
chumsky = "0.11.1"
indoc = "2.0"
insta = "1.43"
miette = "7.6.0"
serde = "1.0.219"
starstream-compiler = { path = "starstream-compiler" }
starstream-language-server = { path = "starstream-language-server" }
starstream-to-wasm = { path = "starstream-to-wasm" }
starstream-types = { path = "starstream-types" }
thiserror = "2.0.17"
tower-lsp-server = { version = "0.22.1", default-features = false, features = [
  "runtime-agnostic",
] }
wasm-encoder = "0.240.0"
wasmprinter = "0.240.0"
wit-component = "0.240.0"

[profile.dev.package]
insta.opt-level = 3

[patch.crates-io]
ark-relations = {  git = "https://github.com/arkworks-rs/snark/" }
ark-snark = {  git = "https://github.com/arkworks-rs/snark/" }
ark-r1cs-std = {  git = "https://github.com/arkworks-rs/r1cs-std" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra"}
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives"}
