[workspace]
resolver = "2"
members = [
  "starstream-cli",
  "starstream-compiler",
  "starstream-interpreter",
  "starstream-language-server",
  "starstream-language-server-web",
  "starstream-runtime-next",
  "starstream-sandbox-web",
  "starstream-to-wasm",
  "starstream-types",
  "interleaving/starstream-interleaving-proof",
  "interleaving/starstream-interleaving-spec",
  "interleaving/starstream-component-runtime",
  "interleaving/starstream-runtime",
  "ark-poseidon2",
  "ark-goldilocks",
]

[workspace.package]
version = "0.0.0"
authors = []
edition = "2024"
rust-version = "1.94.0"
repository = "https://github.com/LFDT-Nightstream/Starstream"
license = "MIT/Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
ariadne = "0.5.1"
chumsky = "0.11.1"
indoc = "2.0"
insta = "1.43"
miette = "7.6.0"
sha2 = "0.10.9"
serde = "1.0.219"
serde_json = "1.0"
starstream-compiler = { path = "starstream-compiler" }
starstream-language-server = { path = "starstream-language-server" }
starstream-runtime-next = { path = "starstream-runtime-next" }
starstream-to-wasm = { path = "starstream-to-wasm" }
starstream-types = { path = "starstream-types" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false }
tower-lsp-server = { version = "0.22.1", default-features = false, features = [
  "runtime-agnostic",
] }
tracing = { version = "0.1.44", default-features = false }
wasm-encoder = "0.240.0"
wasmprinter = "0.240.0"
wasmparser = "0.240.0"
wasmtime = { version = "47.0", default-features = false }
wit-component = "0.240.0"

neo-fold-clean = { git = "https://github.com/LFDT-Nightstream/Nightstream.git", rev = "675f2ce9d9b05553d518c7ccb36abe2eddbad048" }
neo-math = { git = "https://github.com/LFDT-Nightstream/Nightstream.git", rev = "675f2ce9d9b05553d518c7ccb36abe2eddbad048" }
neo-ccs = { git = "https://github.com/LFDT-Nightstream/Nightstream.git", rev = "675f2ce9d9b05553d518c7ccb36abe2eddbad048" }
neo-params = { git = "https://github.com/LFDT-Nightstream/Nightstream.git", rev = "675f2ce9d9b05553d518c7ccb36abe2eddbad048" }

[profile.dev.package]
insta.opt-level = 3

[patch.crates-io]
ark-relations = {  git = "https://github.com/arkworks-rs/snark/" }
ark-snark = {  git = "https://github.com/arkworks-rs/snark/" }
ark-r1cs-std = {  git = "https://github.com/arkworks-rs/r1cs-std" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra"}
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives"}
