[package]
name = "ark-poseidon2"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", features = ["std"] }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["scalar_field"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

ark-goldilocks = { path = "../ark-goldilocks" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poseidon2_gadget"
harness = false
