[package]
name = "starstream-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "starstream"
path = "src/main.rs"

[dependencies]
async-std = "1.13.2"
clap = { version = "4.5.32", features = ["derive"] }
console = "0.16.0"
ignore = "0.4.24"
miette = { workspace = true, features = ["fancy"] }
similar = "2.7.0"
starstream-compiler = { workspace = true }
starstream-language-server = { workspace = true }
starstream-to-wasm = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
tower-lsp-server = { workspace = true }
walkdir = "2.5.0"
