[package]
name = "starstream-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Compiler for the Starstream DSL"
repository.workspace = true
license.workspace = true

[dependencies]
ariadne = { workspace = true }
chumsky = { workspace = true, features = ["pratt"] }
pretty = "0.12.5"
starstream-types = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
