[package]
name = "starstream-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Compiler for the Starstream DSL"
repository.workspace = true
license.workspace = true

[dependencies]
chumsky = { workspace = true, features = ["pratt"] }
miette = { workspace = true, features = ["fancy"] }
pretty = "0.12.5"
starstream-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
