[package]
name = "starstream-language-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dashmap = "6.1.0"
ropey = "1.6.1"
starstream-compiler = { workspace = true }
tower-lsp-server = { workspace = true }
miette = { workspace = true }
starstream-types = { workspace = true }
