[package]
name = "starstream-runtime-next"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
async = ["wasmtime/async"]
trace = ["async", "wasmtime/debug"]
wasmtime-custom-fiber = ["wasmtime/custom-fiber"]
wasmtime-custom-virtual-memory = ["wasmtime/custom-virtual-memory"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = [
    "anyhow",
    "component-model",
    "cranelift",
    "runtime",
] }
wit-component = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
starstream-compiler = { workspace = true }
starstream-to-wasm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
