[package]
name = "starstream-runtime-next"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
async = ["wasmtime/async"]
trace = ["async", "wasmtime/debug"]
wasmtime-custom-fiber = ["wasmtime/custom-fiber"]
wasmtime-custom-virtual-memory = ["wasmtime/custom-virtual-memory"]

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = [
    "attributes",
] }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = [
    "anyhow",
    "component-model",
    "cranelift",
    "runtime",
] }
wit-component = { workspace = true }

[dev-dependencies]
sha2 = "0.10.9"
starstream-compiler = { workspace = true }
starstream-to-wasm = { workspace = true }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
