[package]
name = "starstream-sandbox-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
test = false
crate-type = ["cdylib"]

[dependencies]
# Keep the version in lockstep with the cranelift that wasmtime pins. Used only
# to disable pass timing, which calls `Instant::now()` — a panic on wasm32-unknown-unknown
cranelift-codegen = "0.132.0"
log = "0.4.28"
miette.workspace = true
serde.workspace = true
serde_cbor = "0.11.2"
serde_json = "1.0"
starstream-compiler.workspace = true
starstream-to-wasm.workspace = true
termcolor = "1.4.1"
wasmprinter = { workspace = true, features = ["component-model"] }
wit-component.workspace = true
wasmtime = { version = "45", default-features = false, features = [
    "component-model",
    "cranelift",
    "custom-virtual-memory",
    "runtime",
    "wave",
] }
