[package]
name = "starstream-to-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
starstream-types.workspace = true
thiserror.workspace = true
wasm-encoder.workspace = true

[dev-dependencies]
insta.workspace = true
wasmprinter.workspace = true
