[package]
name = "starstream-to-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
starstream-types.workspace = true
thiserror.workspace = true
wasm-encoder = { workspace = true, features = ["component-model"] }

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
starstream-compiler.workspace = true
wasmprinter = { workspace = true, features = ["component-model"] }
wasmtime = "39.0"
wit-component.workspace = true
