[package]
name = "starstream_ivc_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", features = ["std"] }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["scalar_field"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

neo-fold = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-math = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-ccs = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-ajtai = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-params = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-vm-trace = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }
neo-memory = { git = "https://github.com/nicarq/Nightstream.git", rev = "484d3dcb7d8f988cd7602d7717a4d63244f06377" }

starstream_mock_ledger = { path = "../starstream_mock_ledger" }

p3-goldilocks = { version = "0.4.1", default-features = false }
p3-field = "0.4.1"
p3-symmetric = "0.4.1"
p3-poseidon2 = "0.4.1"
rand_chacha = "0.9.0"
rand = "0.9"
