[package]
name = "starstream_vm"
version = "0.0.0"
edition = "2024"

[dependencies]
#binaryen = "0.13.0"
byteorder = "1.5.0"
rand = "0.8.5"
wasmi = { git = "https://github.com/SpaceManiac/zkEngine_dev", branch = "patch/resume-use-after-free" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = "0.10.8"
termcolor = "1.4.1"
zk-engine = { git = "https://github.com/SpaceManiac/zkEngine_dev", branch = "patch/resume-use-after-free" }
