# Compiles the example Starstream contracts under `examples/` (via the
# Starstream compiler in `build.rs`) and exposes each produced core `.wasm` as a
# `const` for the host crates' tests to consume.
#
# Unlike a Rust guest, there is no `wasm32-unknown-unknown` cargo build here: the
# Starstream source is compiled to a core Wasm module (carrying a
# `component-type` custom section) directly in-process, so this crate builds for
# the host like any other and needs no extra target installed.
[package]
name = "test-contracts"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
# Only used as a path dependency for embedding the compiled contracts; no need
# to run its (empty) test harness in the workspace build.
test = false

[build-dependencies]
starstream-compiler = { workspace = true }
starstream-to-wasm = { workspace = true }
starstream-types = { workspace = true }
