[package]
name = "toy_vm"
version = "0.0.0"
edition = "2024"

[features]
default = []
starstream = ["dep:starstream_sys"]

[dependencies]
starstream_sys = { path = "../../starstream_sys", optional = true }
rand = { version = "0.9.1", default-features = false }

[dev-dependencies]
talc = "4.4.2"
spin = "0.10.0"
rand_chacha = { version = "0.9.0", default-features = false }
