[package]
name = "starstream-interleaving-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", features = ["std"] }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["scalar_field"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

neo-fold = { workspace = true }
neo-math = { workspace = true }
neo-ccs = { workspace = true }
neo-ajtai = { workspace = true }
neo-params = { workspace = true }
neo-vm-trace = { workspace = true }
neo-memory = { workspace = true }

starstream-interleaving-spec = { path = "../starstream-interleaving-spec" }

p3-goldilocks = { version = "0.4.1", default-features = false }
p3-field = "0.4.1"
p3-symmetric = "0.4.1"
p3-poseidon2 = "0.4.1"
rand_chacha = "0.9.0"
rand = "0.9"

ark-goldilocks = { path = "../../ark-goldilocks" }
ark-poseidon2 = { path = "../../ark-poseidon2" }
