[package]
name = "starstream-interleaving-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", features = ["std"] }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

starstream-interleaving-spec = { path = "../starstream-interleaving-spec" }

ark-goldilocks = { path = "../../ark-goldilocks" }
ark-poseidon2 = { path = "../../ark-poseidon2" }

neo-fold-clean = { workspace = true }
neo-math = { workspace = true }
neo-ccs = { workspace = true }
neo-params = { workspace = true }
p3-field = "0.5.1"
