[package]
name = "starstream-interleaving-spec"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
imbl = "6.1.0"
thiserror = "2.0.17"
ark-ff = { version = "0.5.0", default-features = false }
ark-goldilocks = { path = "../../ark-goldilocks" }

# TODO: move to workspace deps
neo-fold = { git = "https://github.com/nicarq/Nightstream.git", rev = "e93ae040e29a3e883d08569a8ccbf79118ebd218" }
neo-ccs = { git = "https://github.com/nicarq/Nightstream.git", rev = "e93ae040e29a3e883d08569a8ccbf79118ebd218" }
neo-math = { git = "https://github.com/nicarq/Nightstream.git", rev = "e93ae040e29a3e883d08569a8ccbf79118ebd218" }
neo-ajtai = { git = "https://github.com/nicarq/Nightstream.git", rev = "e93ae040e29a3e883d08569a8ccbf79118ebd218" }
neo-memory = { git = "https://github.com/nicarq/Nightstream.git", rev = "e93ae040e29a3e883d08569a8ccbf79118ebd218" }

p3-field = "0.4.1"
