[package]
name = "starstream-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
starstream-interleaving-proof = { path = "../starstream-interleaving-proof" }
starstream-interleaving-spec = { path = "../starstream-interleaving-spec" }
thiserror = "2.0.17"
wasmtime = { version = "39.0", default-features = false, features = ["cranelift", "runtime", "component-model"] }
ark-ff = { version = "0.5.0", default-features = false }
ark-poseidon2 = { path = "../../ark-poseidon2" }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wasmparser = "0.240.0"
wit-parser = "0.240.0"

[dev-dependencies]
imbl = "6.1.0"
wat = "1.0"
wasmprinter = { workspace = true }
